Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Added a normalizer for mail search
- Parameters can be taken from sessions as well now.
  Using ${SESSION.var}.
  For example, ${SESSION.element} will retrieve "element"
Bug fixes:
~~~~~~~~~~
- #1146 better handling of attached file with non well-specified mime types
- #1143 removed dependency on CPSDefault.BaseBox
- Removed deprecation warnings.
- Added more semantic allowed markup in the HTMLSanitizer.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Added a dedicated C extension for optimisations